fix spacing and redirect

--- a/backend/static/backend/css/profile_edit_style.css
+++ b/backend/static/backend/css/profile_edit_style.css
@@ -7,3 +7,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+.profile-form-edit > input {
+  margin-bottom: 12px;
+}
+
+.profile-form-submit {
+  margin-top: 15px;
+}
